Fix alignment of timeline dot + Build.

--- a/public/styles/resume.less
+++ b/public/styles/resume.less
@@ -179,7 +179,7 @@
         display: block;
         position: absolute;
         box-sizing: border-box;
-        left: -13px;
+        left: -15px;
         top: 0;
         margin-top: 3.5em;
         background: #111;
